Thu Apr  6 16:01:30 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CCF/CCF/CompilerElements/TokenStream.hpp:

          Added empty virtual destructor to template base class, to
          eliminate bogus GCC warnings.

Thu Apr  6 15:22:31 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * ciaosvcs/Events/CIAO_Events.mpc

          Fixed linking errors on WinXP_BCB6_Pro_Dynamic_Release build.

        * examples/Hello/descriptors_shared_components/deploymentplan.cdp
        * examples/Hello/descriptors_shared_components/deploymentplan_shared_components.cdp

          Modified to illustrate the shared components scenario.

Thu Apr  6 14:54:59 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * ciaosvcs/Events/CIAO_EventService_Factory_impl.h
        * ciaosvcs/Events/CIAO_RTEC/CIAO_RTEvent.h

          Some cosmestic changes.

Thu Apr  6 08:20:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/CCM_Component.idl:
          Removed the forward declaration of IRObject and just include
          ciao/CCM_Component.idl. The forward declaration is causing
          problems with the versioned namespace support, will investigate
          this later

Wed Apr  5 20:57:32 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * TAO/CIAO/ciaosvcs/Events/CIAO_RTEC/CIAO_RTEvent.cpp

          Make debug statement debug_level controlled.

Wed Apr  5 18:49:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/CIAO_Events/CIAOEvents.hpp:
          Fixed compile errors

Wed Apr  5 13:18:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciaosvcs/Events/CIAO_RTEC/CIAO_RTEvent.h:
          Fixed pragma once warning

        * ciaosvcs/Events/CIAO_RTEC/CIAO_RTEvent.cpp:
          Fixed conversion warning

Wed Apr  5 12:24:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/Basic_Deployment_Data.hpp:
          Fixed compile errors
